--- a/ms-gateway/src/main/resources/bootstrap.yml
+++ b/ms-gateway/src/main/resources/bootstrap.yml
@@ -1,8 +1,7 @@
 spring:
   application:
-    name: api-movie
+    name: ms-gateway
   cloud:
     config:
       enabled: true
       uri: http://localhost:8888
-
