--- a/api-catalog/src/main/resources/bootstrap.yml
+++ b/api-catalog/src/main/resources/bootstrap.yml
@@ -1,5 +1,7 @@
-server:
-  port: ${PORT:${SERVER_PORT:0}}
 spring:
   application:
     name: api-catalog
+  cloud:
+    config:
+      enabled: true
+      uri: http://localhost:8888
