--- a/config-data/api-catalog.yml
+++ b/config-data/api-catalog.yml
@@ -1,14 +1,10 @@
 server:
-  #  port: ${PORT:${SERVER_PORT:0}}
-  port: 8082
+  port: ${PORT:${SERVER_PORT:0}}
+#  port: 8082
 spring:
   application:
     name: api-catalog
-  datasource:
-    driverClassName: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/movies-dev
-    username: usr-movies
-    password: pwd-movies
+
   jpa:
     hibernate.ddl-auto: update
     generate-ddl: true
@@ -19,3 +15,5 @@ eureka:
     fetchRegistry: true
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+    instance:
+      instance-id: ${spring.application.name}:${random.int}
