--- a/config-data/api-movie.yml
+++ b/config-data/api-movie.yml
@@ -1,21 +1,24 @@
 server:
-  #  port: ${PORT:${SERVER_PORT:0}}
-  port: 8081
+  port: ${PORT:${SERVER_PORT:0}}
+  # port: 8081
 spring:
   application:
     name: api-movie
   datasource:
     driverClassName: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3306/movies-dev
-    username: usr-movies
-    password: pwd-movies
+    username: root
+    password: admin
   jpa:
     hibernate.ddl-auto: update
     generate-ddl: true
     show-sql: true
+
 eureka:
   client:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+    instance:
+      instance-id: ${spring.application.name}:${random.int}
