--- a/config-data/api-catalog.yml
+++ b/config-data/api-catalog.yml
@@ -12,4 +12,4 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
     instance:
-      instance-id: ${spring.application.name}:${random.int}
+      instance-id: ${spring.application.name}:${port}
