--- a/config-data/api-catalog.yml
+++ b/config-data/api-catalog.yml
@@ -4,8 +4,8 @@ server:
 spring:
   application:
     name: api-catalog
-  autoconfigure:
-    exclude: org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+#  autoconfigure:
+#    exclude: org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
 eureka:
   client:
